# src/main/resources/api-specs/product-openapi.yaml
@@ -184,6 +184,12 @@ paths:
           schema:
             type: "string"
             maxLength: 200
+        - name: "origin_country"
+          description: "Country of origin to filter products"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
       responses:
         "200":
           description: "Paginated list of products retrieved successfully."
